--- a/css/style-add.css
+++ b/css/style-add.css
@@ -25,11 +25,13 @@
   text-decoration: none;
   font-size: 1rem;
   margin: 0 0.5em;
+  -webkit-transition: all ease-in-out 0.5s;
   transition: all ease-in-out 0.5s;
 }
 
 .nav-item-home:hover {
   color: #373737;
+  -webkit-transition: all ease-in-out 0.4s;
   transition: all ease-in-out 0.4s;
 }
 
@@ -52,7 +54,6 @@
     "t2 t4"
     "t2 .";
   max-width: 768px;
-  margin: auto;
   background: #fff;
 }
 
@@ -66,14 +67,12 @@ img {
   text-transform: uppercase;
   margin: 0 0 1em;
   padding: 0.5em;
-  /*border: 1px solid yellow;*/
 }
 
 .article-title h1 {
   padding: 0;
   margin: 0;
   font-weight: 900;
-  /*border: 1px solid red;*/
 }
 
 .article-title h1:nth-child(1) {
@@ -83,14 +82,12 @@ img {
 .article-subtitle {
   grid-area: st;
   margin: 0 1em;
-  /*border: 1px solid blue;*/
 }
 
 .article-subtitle h2 {
   font-size: 0.9em;
   margin: 0 0 1em;
   font-weight: 700;
-  /*border: 1px solid pink;*/
 }
 
 .title-text {
@@ -102,12 +99,14 @@ img {
   font-size: 0.8em;
   margin: 1em 0;
   font-weight: 700;
-  /*border: 1px solid purple;*/
 }
 
 .article-text {
+  -webkit-columns: 2;
   columns: 2;
+  -webkit-column-gap: 0.7em;
   column-gap: 0.7em;
+  -webkit-column-width: 200px;
   column-width: 200px;
   color: #444;
 }
@@ -124,13 +123,11 @@ img {
 .text-1 {
   grid-area: t1;
   padding: 0 1em;
-  /*border: 1px solid grey;*/
 }
 
 .text-2 {
   grid-area: t2;
   padding: 0 1em;
-  /*border: 1px solid blue;*/
 }
 
 .article-image {
@@ -153,7 +150,6 @@ img {
 .text-3 {
   grid-area: t3;
   padding: 0 1em;
-  /*border: 1px solid orange;*/
 }
 
 .upper {
@@ -163,7 +159,6 @@ img {
 .text-4 {
   grid-area: t4;
   padding: 0 1em;
-  /*border: 1px solid lightblue;*/
 }
 
 .fixed-top {
@@ -174,10 +169,6 @@ img {
 .nav-fixed {
   height: 14px;
   width: 100vw;
-}
-
-.menu-about {
-  margin-right: 1.5em;
 }
 
 .fixed-bottom {
@@ -221,12 +212,10 @@ img {
 }
 
 .container-img > a > img {
-  left: 50%;
   position: absolute;
+  left: 50%;
   top: 50%;
-  -ms-transform: translate(-50%, -50%);
   -webkit-transform: translate(-50%, -50%);
-  -moz-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   width: 100%;
   height: 100%;
@@ -248,10 +237,16 @@ img {
 }
 
 .contact-social-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   width: 100%;
   background: #1c1e22;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
 }
 
@@ -266,6 +261,7 @@ img {
 
 .nav-social-contact:hover {
   color: #373737;
+  -webkit-transition: all ease-in-out 0.4s;
   transition: all ease-in-out 0.4s;
 }
 
@@ -293,9 +289,15 @@ img {
 }
 
 .contact-form-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   width: 100%;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
 }
 
@@ -304,33 +306,25 @@ img {
   margin-top: -25px;
 }
 
-.menu-contact {
-  margin-right: 1.5em;
-}
+/* Contact Form Styles */
 
-/* Form Styles */
-
-/* input::-webkit-input-placeholder,
+input::-webkit-input-placeholder,
 textarea::-webkit-input-placeholder {
-  color: #aca49c;
+  color: #989898;
   font-size: 0.875em;
 }
 
-input:focus::-webkit-input-placeholder,
-textarea:focus::-webkit-input-placeholder {
-  color: #bbb5af;
-}
-
-input::-moz-placeholder,
-textarea::-moz-placeholder {
-  color: #aca49c;
+input:-ms-input-placeholder,
+textarea:-ms-input-placeholder {
+  color: #989898;
   font-size: 0.875em;
 }
 
-input:focus::-moz-placeholder,
-textarea:focus::-moz-placeholder {
-  color: #bbb5af;
-} */
+input::-ms-input-placeholder,
+textarea::-ms-input-placeholder {
+  color: #989898;
+  font-size: 0.875em;
+}
 
 input::placeholder,
 textarea::placeholder {
@@ -338,41 +332,43 @@ textarea::placeholder {
   font-size: 0.875em;
 }
 
+input:focus::-webkit-input-placeholder,
+textarea:focus::-webkit-input-placeholder {
+  color: #d9d9d9;
+}
+
+input:focus:-ms-input-placeholder,
+textarea:focus:-ms-input-placeholder {
+  color: #d9d9d9;
+}
+
+input:focus::-ms-input-placeholder,
+textarea:focus::-ms-input-placeholder {
+  color: #d9d9d9;
+}
+
 input:focus::placeholder,
 textarea:focus::placeholder {
   color: #d9d9d9;
 }
 
-/* input::-ms-placeholder,
-textarea::-ms-placeholder {
-  color: #aca49c;
+input:hover::-webkit-input-placeholder,
+textarea:hover::-webkit-input-placeholder {
+  color: #eee;
   font-size: 0.875em;
 }
 
-input:focus::-ms-placeholder,
-textarea:focus::-ms-placeholder {
-  color: #bbb5af;
-} */
-
-/* On Hover Placeholder */
-
-/* input:hover::-webkit-input-placeholder, textarea:hover::-webkit-input-placeholder {
-  color: #e2dedb;
+input:hover:-ms-input-placeholder,
+textarea:hover:-ms-input-placeholder {
+  color: #eee;
   font-size: 0.875em;
 }
 
-input:hover:focus::-webkit-input-placeholder, textarea:hover:focus::-webkit-input-placeholder {
-  color: #cbc6c1;
-}
-
-input:hover::-moz-placeholder, textarea:hover::-moz-placeholder {
-  color: #e2dedb;
+input:hover::-ms-input-placeholder,
+textarea:hover::-ms-input-placeholder {
+  color: #eee;
   font-size: 0.875em;
 }
-
-input:hover:focus::-moz-placeholder, textarea:hover:focus::-moz-placeholder {
-  color: #cbc6c1;
-} */
 
 input:hover::placeholder,
 textarea:hover::placeholder {
@@ -380,19 +376,25 @@ textarea:hover::placeholder {
   font-size: 0.875em;
 }
 
+input:hover:focus::-webkit-input-placeholder,
+textarea:hover:focus::-webkit-input-placeholder {
+  color: #c3c3c3;
+}
+
+input:hover:focus:-ms-input-placeholder,
+textarea:hover:focus:-ms-input-placeholder {
+  color: #c3c3c3;
+}
+
+input:hover:focus::-ms-input-placeholder,
+textarea:hover:focus::-ms-input-placeholder {
+  color: #c3c3c3;
+}
+
 input:hover:focus::placeholder,
 textarea:hover:focus::placeholder {
   color: #c3c3c3;
 }
-
-/* input:hover::-ms-placeholder, textarea:hover::-ms-placeholder {
-  color: #e2dedb;
-  font-size: 0.875em;
-}
-
-input:hover:focus::-ms-placeholder, textarea:hover:focus::-ms-placeholder {
-  color: #cbc6c1;
-} */
 
 .form-title {
   position: relative;
@@ -414,14 +416,11 @@ input {
   width: 100%;
   height: 50px;
   padding: 0 15px;
-
   background: transparent;
   outline: none;
   color: #5b5b5b;
-
   border: solid 1px #989898;
   border-bottom: none;
-
   transition: all 0.3s ease-in-out;
   -webkit-transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
@@ -430,8 +429,7 @@ input {
 
 input:hover {
   background: #c3c3c3;
-  color: #e2dedb;
-  color: #eee;
+  color: #1c1e22;
 }
 
 textarea {
@@ -440,17 +438,13 @@ textarea {
   height: 110px;
   max-height: 110px;
   padding: 15px;
-
   background: transparent;
   outline: none;
-
   color: #5b5b5b;
   font-family: 'Lato', sans-serif;
   font-size: 0.875em;
-
   border: solid 1px #989898;
   border-bottom: none;
-
   transition: all 0.3s ease-in-out;
   -webkit-transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
@@ -459,28 +453,45 @@ textarea {
 
 textarea:hover {
   background: #c3c3c3;
-  color: #eee;
+  color: #1c1e22;
+}
+
+#spam {
+  display: none;
 }
 
 #submit {
   width: 100%;
-
   padding: 0;
   margin: -5px 0 0 0;
-
   font-family: 'Lato', sans-serif;
   font-size: 0.875em;
   color: #989898;
-
-  outline:none;
+  outline: none;
   cursor: pointer;
-
   border: solid 1px #989898;
-  /*border-top: none;*/
 }
 
 #submit:hover {
   color: #eee;
+}
+
+/* Thank You Styles */
+
+.grid-thanks {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto;
+  grid-template-areas: "thanks";
+}
+
+.thanks {
+  grid-area: thanks;
+  text-align: center;
+  margin: auto;
+  padding: 1em;
+  border: 1px solid #000;
+  border-radius: 4px;
 }
 
 /* Media Queries */
@@ -523,9 +534,10 @@ textarea:hover {
     margin-top: 50px;
   }
 
-  /*.portfolio-wrapper {
-    margin-top: 60px;
-  }*/
+  .nav-item-home {
+    margin: 0;
+    padding: 0 16em;
+  }
 
   .article-wrapper {
     margin-top: 60px;
@@ -546,7 +558,7 @@ textarea:hover {
   }
 }
 
-@media screen and (max-width: 650px) and (orientation: portrait) {
+@media screen and (max-width: 651px) and (orientation: portrait) {
   .article-wrapper {
     grid-template-columns: 1fr;
     grid-template-rows: auto;
@@ -558,6 +570,11 @@ textarea:hover {
       "t2"
       "t3"
       "t4";
+  }
+
+  .article-text {
+    -webkit-columns: 1;
+    columns: 1;
   }
 
   .caption {
@@ -593,6 +610,14 @@ textarea:hover {
   .social-block {
     width: 60%;
   }
+
+  .social-block ul li p {
+    font-size: 0.9em;
+  }
+
+  .nav-item-home {
+    padding: 0 11.5em;
+  }
 }
 
 @media screen and (max-width: 438px) and (orientation: portrait) {
@@ -623,6 +648,10 @@ textarea:hover {
     font-size: 0.8rem;
   }
 
+  .nav-item-home {
+    padding: 0 12.5em;
+  }
+
   .container-img {
     width: 375px;
     height: 200px;
@@ -638,10 +667,6 @@ textarea:hover {
 
   .social-block ul li .fa {
     font-size: 1.9em;
-  }
-
-  .social-block ul li p {
-    font-size: 0.9em;
   }
 
   .form-title {
@@ -666,6 +691,10 @@ textarea:hover {
   .sl-control,
   .demo_block {
     font-size: 0.7rem;
+  }
+
+  .nav-item-home {
+    padding: 0 13em;
   }
 
   .container-img {
@@ -708,9 +737,20 @@ textarea:hover {
   textarea {
     height: 65px;
   }
+
+  .nav-item-home {
+    padding: 0 11em;
+  }
 }
 
 /* Media Queries Landscape */
+
+@media screen and (min-width: 1500px) and (orientation: landscape) {
+  .container-img {
+    width: 1125px;
+    height: 600px;
+  }
+}
 
 @media screen and (max-width: 1024px) and (orientation: landscape) {
   .nav-social-contact {
@@ -720,11 +760,19 @@ textarea:hover {
   .social-block {
     width: 70%;
   }
+
+  .fixed-bottom {
+    position: relative;
+  }
 }
 
 @media screen and (max-width: 960px) and (orientation: landscape) {
   .social-block {
     width: 80%;
+  }
+
+  .social-block ul li p {
+    font-size: 1em;
   }
 }
 
@@ -737,12 +785,12 @@ textarea:hover {
     margin-top: 50px;
   }
 
-  .article-wrapper {
-    margin-top: 60px;
-  }
-
   .article-title {
     font-size: 1.5em;
+  }
+
+  .article-wrapper {
+    margin-top: 60px;
   }
 
   .nav-fixed {
@@ -750,7 +798,9 @@ textarea:hover {
   }
 
   .nav-item-home {
+    margin: 0;
     font-size: 0.8rem;
+    padding: 0 19em;
   }
 
   .portfolio-wrapper {
@@ -794,19 +844,15 @@ textarea:hover {
 
 @media screen and (max-width: 736px) and (orientation: landscape) {
   .caption {
-    bottom: 2em;
+    visibility: hidden;
   }
 
   .text-4 {
-    margin-top: -1em;
+    margin-top: -1.5em;
   }
 }
 
 @media screen and (max-width: 667px) and (orientation: landscape) {
-  .caption {
-    bottom: 8em;
-  }
-
   .text-4 {
     margin-top: -4.5em;
   }
@@ -821,12 +867,17 @@ textarea:hover {
   }
 }
 
-@media screen and (max-width: 568px) and (orientation: landscape) {
-  .caption {
-    bottom: 22em;
-    font-size: 0.5em;
+@media screen and (max-width: 640px) and (orientation: landscape) {
+  .text-4 {
+    margin-top: -8em;
   }
 
+  .social-block ul li p {
+    font-size: 0.7em;
+  }
+}
+
+@media screen and (max-width: 568px) and (orientation: landscape) {
   .text-4 {
     margin-top: -10.5em;
   }
@@ -841,7 +892,7 @@ textarea:hover {
   }
 
   .social-block ul li p {
-    font-size: 0.7em;
+    font-size: 0.65em;
   }
 
   input {
@@ -860,6 +911,20 @@ textarea:hover {
 
   .form-title {
     font-size: 1.1em;
+  }
+
+  .nav-item-home {
+    padding: 0 15em;
+  }
+}
+
+@media screen and (max-width: 480px) and (orientation: landscape) {
+  .text-4 {
+    margin-top: -18.5em;
+  }
+
+  .social-block ul li p {
+    font-size: 0.55em;
   }
 }
 
@@ -903,5 +968,41 @@ textarea:hover {
 @media screen and (max-width: 320px) and (orientation: portrait) {
   .social-block {
     width: 50%;
+  }
+}
+
+/* iPhone X landscape */
+
+@media only screen and (device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) {
+  .flex-bg {
+    background: #000;
+  }
+}
+
+/* iPad portrait orientation */
+@media all and (device-width: 768px) and (device-height: 1024px) and (orientation: portrait) {
+  .full-height {
+    height: 1024px;
+  }
+}
+
+/* iPad landscape orientation */
+@media all and (device-width: 1024px) and (device-height: 768px) and (orientation: landscape) {
+  .full-height {
+    height: 768px;
+  }
+}
+
+/* iPad Pro portrait orientation */
+@media all and (device-width: 1024px) and (device-height: 1366px) and (orientation: portrait) {
+  .full-height {
+    height: 1024px;
+  }
+}
+
+/* iPad Pro landscape orientation */
+@media all and (device-width: 1366px) and (device-height: 1024px) and (orientation: landscape) {
+  .full-height {
+    height: 768px;
   }
 }
